[gd_scene load_steps=11 format=2]

[ext_resource path="res://Weapons/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" type="Texture" id=2]
[ext_resource path="res://Weapons/Weapon.gd" type="Script" id=3]
[ext_resource path="res://Assets/topdown-shooter/PNG/weapon_silencer.png" type="Texture" id=4]
[ext_resource path="res://Sounds/gunreload.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/gunshoot.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/EmptyGun.mp3" type="AudioStream" id=7]
[ext_resource path="res://Weapons/BulletBoss.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "GunFlash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("GunFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.000273565, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Reload"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0025, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, -45.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_reload"
}, {
"args": [  ],
"method": "_stop_reload"
} ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )
Bullet = ExtResource( 1 )
BulletBoss = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 28, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GunFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 28, -3.63798e-12 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GunFlash = SubResource( 1 )
anims/Reload = SubResource( 2 )

[node name="GunReloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 0.0
max_distance = 500.0

[node name="GunShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 5.0

[node name="EmptyGun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 0
